# Tarefas

./: .pdm-python  README.md  db.sqlite3  index.html  pyproject.toml  style.css
backend/: requirements.txt  settings.py  urls.py
frontend/: index.html  listas.js  scripts.js  style.css
lista/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
lista/migrations/: 0001_initial.py
