[project]
name = "Tarefas"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Henrique Costa", email = "hencostnascimento@gmail.com"},
]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python manage.py runserver"
